--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -57,7 +57,7 @@
      <rect>
       <x>30</x>
       <y>370</y>
-      <width>441</width>
+      <width>451</width>
       <height>91</height>
      </rect>
     </property>
@@ -70,18 +70,18 @@
     <property name="title">
      <string>Opções de visualização do gráfico</string>
     </property>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="layoutWidget1">
      <property name="geometry">
       <rect>
        <x>30</x>
        <y>30</y>
-       <width>371</width>
+       <width>424</width>
        <height>54</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_9">
       <item row="0" column="0">
-       <widget class="QCheckBox" name="checkBox">
+       <widget class="QCheckBox" name="checkBoxL1_SP1">
         <property name="text">
          <string>L1 e SP1</string>
         </property>
@@ -91,7 +91,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QCheckBox" name="checkBox_2">
+       <widget class="QCheckBox" name="checkBoxL2_SP2">
         <property name="text">
          <string>L2 e SP2</string>
         </property>
@@ -101,51 +101,54 @@
        </widget>
       </item>
       <item row="0" column="2">
-       <widget class="QCheckBox" name="checkBox_3">
+       <widget class="QCheckBox" name="checkBox_E1">
         <property name="text">
          <string>E1</string>
         </property>
        </widget>
       </item>
       <item row="0" column="3">
-       <widget class="QCheckBox" name="checkBox_4">
+       <widget class="QCheckBox" name="checkBox_E2">
         <property name="text">
          <string>E2</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QCheckBox" name="checkBox_5">
+       <widget class="QCheckBox" name="checkBox_PIDe">
         <property name="text">
          <string>PID(Escravo)</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QCheckBox" name="checkBox_6">
+       <widget class="QCheckBox" name="checkBox_PIDm">
         <property name="text">
          <string>PID(Mestre)</string>
         </property>
        </widget>
       </item>
       <item row="1" column="2">
-       <widget class="QCheckBox" name="checkBox_7">
+       <widget class="QCheckBox" name="checkBox_Tensoes">
         <property name="text">
          <string>Tensões</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QCheckBox" name="checkBox_8">
+       <widget class="QCheckBox" name="checkBox_Observador">
         <property name="text">
-         <string>PV2</string>
+         <string>Observador</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="label_nomePrograma">
     <property name="geometry">
      <rect>
       <x>430</x>
@@ -184,18 +187,18 @@
     <property name="flat">
      <bool>false</bool>
     </property>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="layoutWidget2">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>155</width>
+       <width>175</width>
        <height>101</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_5">
       <item row="0" column="0">
-       <widget class="QLabel" name="label_10">
+       <widget class="QLabel" name="label_Ordem">
         <property name="text">
          <string>Ordem</string>
         </property>
@@ -230,7 +233,7 @@
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_5">
+       <widget class="QLabel" name="label_Canal">
         <property name="text">
          <string>Canal</string>
         </property>
@@ -247,7 +250,7 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="label_Sinal">
         <property name="text">
          <string>Sinal</string>
         </property>
@@ -268,7 +271,7 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="layoutWidget3">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -305,7 +308,7 @@
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QLabel" name="label_8">
+       <widget class="QLabel" name="labelOffset">
         <property name="text">
          <string>Offset</string>
         </property>
@@ -315,7 +318,7 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QLabel" name="label_6">
+       <widget class="QLabel" name="labelPeriodo">
         <property name="text">
          <string>Período</string>
         </property>
@@ -352,18 +355,18 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="layoutWidget4">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>220</y>
-       <width>151</width>
+       <width>156</width>
        <height>27</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
       <item row="0" column="0">
-       <widget class="QLabel" name="label_15">
+       <widget class="QLabel" name="labelTs">
         <property name="text">
          <string>ts</string>
         </property>
@@ -406,7 +409,7 @@
        </widget>
       </item>
       <item row="0" column="2">
-       <widget class="QLabel" name="label_16">
+       <widget class="QLabel" name="labelTr">
         <property name="text">
          <string>tr</string>
         </property>
@@ -458,7 +461,7 @@
     <property name="styleSheet">
      <string notr="true"/>
     </property>
-    <widget class="QFrame" name="frame_2">
+    <widget class="QFrame" name="frame_grafico1">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -476,7 +479,7 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget5">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -487,7 +490,7 @@
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLabel" name="label_7">
+        <widget class="QLabel" name="label_tanque1">
          <property name="text">
           <string>Tanque 1 :</string>
          </property>
@@ -504,7 +507,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_9">
+        <widget class="QLabel" name="label_cm">
          <property name="text">
           <string>cm</string>
          </property>
@@ -523,7 +526,7 @@
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QLabel" name="label_17">
+        <widget class="QLabel" name="label_tanque2">
          <property name="text">
           <string>Tanque 2 :</string>
          </property>
@@ -540,7 +543,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_18">
+        <widget class="QLabel" name="label_cm2">
          <property name="text">
           <string>cm</string>
          </property>
@@ -573,7 +576,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QGroupBox" name="groupBox_Resultados">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -624,7 +627,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QLabel" name="label_11">
+    <widget class="QLabel" name="label_tempoSubida">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -637,7 +640,7 @@
       <string>Tempo de subida (tr)</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_12">
+    <widget class="QLabel" name="label_TempoAcomodacao">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -650,7 +653,7 @@
       <string>Tempo de acomodação (ts)</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_13">
+    <widget class="QLabel" name="label_TempoPico">
      <property name="geometry">
       <rect>
        <x>230</x>
@@ -676,7 +679,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QLabel" name="label_14">
+    <widget class="QLabel" name="label_Sobressinal">
      <property name="geometry">
       <rect>
        <x>230</x>
@@ -689,7 +692,7 @@
       <string>Sobressinal (Mp%)</string>
      </property>
     </widget>
-    <widget class="Line" name="line">
+    <widget class="Line" name="line_resultados">
      <property name="geometry">
       <rect>
        <x>200</x>
@@ -702,7 +705,7 @@
       <enum>Qt::Vertical</enum>
      </property>
     </widget>
-    <widget class="Line" name="line_2">
+    <widget class="Line" name="line_resultados2">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -716,7 +719,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="frame_3">
+   <widget class="QFrame" name="frame2">
     <property name="geometry">
      <rect>
       <x>500</x>
@@ -746,7 +749,7 @@
      <property name="styleSheet">
       <string notr="true"/>
      </property>
-     <widget class="QFrame" name="frame_4">
+     <widget class="QFrame" name="frame_grafico2">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -767,7 +770,7 @@
      </widget>
     </widget>
    </widget>
-   <widget class="QTabWidget" name="tabWidget">
+   <widget class="QTabWidget" name="tabWidgetControle">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -777,13 +780,13 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
       <string>Control 1</string>
      </attribute>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget6">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -818,7 +821,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget7">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -829,7 +832,7 @@
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
-        <widget class="QLabel" name="label_2">
+        <widget class="QLabel" name="label_kp">
          <property name="text">
           <string>Ganho (Kp)</string>
          </property>
@@ -872,7 +875,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QWidget" name="layoutWidget8">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -883,7 +886,7 @@
       </property>
       <layout class="QGridLayout" name="gridLayout_6">
        <item row="0" column="0">
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="labelTipo">
          <property name="text">
           <string>Tipo</string>
          </property>
@@ -977,7 +980,7 @@
       </property>
       <layout class="QGridLayout" name="gridLayout_8">
        <item row="0" column="0">
-        <widget class="QLabel" name="label_20">
+        <widget class="QLabel" name="label_kp_2">
          <property name="text">
           <string>Ganho (Kp)</string>
          </property>
@@ -1144,13 +1147,13 @@
        <string>Matriz de ganhos</string>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget9">
       <property name="geometry">
        <rect>
         <x>30</x>
         <y>190</y>
-        <width>147</width>
-        <height>26</height>
+        <width>160</width>
+        <height>28</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -1177,13 +1180,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>30</x>
         <y>100</y>
-        <width>87</width>
-        <height>55</height>
+        <width>95</width>
+        <height>60</height>
        </rect>
       </property>
       <layout class="QFormLayout" name="formLayout">
@@ -1222,13 +1225,13 @@
    <zorder>radioButtonMalhaAberta</zorder>
    <zorder>radioButtonMalhaFechada</zorder>
    <zorder>groupBoxSaida</zorder>
-   <zorder>label_4</zorder>
+   <zorder>label_nomePrograma</zorder>
    <zorder>groupBoxEntrada</zorder>
    <zorder>plotS1</zorder>
    <zorder>splitter</zorder>
-   <zorder>groupBox</zorder>
-   <zorder>tabWidget</zorder>
-   <zorder>frame_3</zorder>
+   <zorder>groupBox_Resultados</zorder>
+   <zorder>tabWidgetControle</zorder>
+   <zorder>frame2</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
