--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -70,13 +70,13 @@
     <property name="title">
      <string>Opções de visualização do gráfico</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>211</width>
-       <height>101</height>
+       <width>225</width>
+       <height>112</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout">
@@ -1060,6 +1060,9 @@
       <string>Observação</string>
      </attribute>
      <widget class="QCheckBox" name="checkBox_observacao">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1072,7 +1075,7 @@
        <string>Observação de estados</string>
       </property>
       <property name="checked">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QDoubleSpinBox" name="doubleSpinBox_kp_obs">
@@ -1126,13 +1129,16 @@
       <property name="text">
        <string>Matriz de ganhos</string>
       </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
      </widget>
      <widget class="QWidget" name="layoutWidget9">
       <property name="geometry">
        <rect>
         <x>30</x>
         <y>190</y>
-        <width>160</width>
+        <width>186</width>
         <height>28</height>
        </rect>
       </property>
@@ -1149,6 +1155,12 @@
          <property name="enabled">
           <bool>false</bool>
          </property>
+         <property name="minimum">
+          <double>-999.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>999.990000000000009</double>
+         </property>
         </widget>
        </item>
        <item>
@@ -1156,17 +1168,23 @@
          <property name="enabled">
           <bool>false</bool>
          </property>
+         <property name="minimum">
+          <double>-999.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>999.990000000000009</double>
+         </property>
         </widget>
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget11">
       <property name="geometry">
        <rect>
         <x>20</x>
         <y>100</y>
-        <width>175</width>
-        <height>55</height>
+        <width>192</width>
+        <height>60</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_11">
@@ -1182,6 +1200,12 @@
          <property name="enabled">
           <bool>false</bool>
          </property>
+         <property name="minimum">
+          <double>-1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>1.000000000000000</double>
+         </property>
         </widget>
        </item>
        <item row="0" column="2">
@@ -1195,6 +1219,12 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_p1_img">
          <property name="enabled">
           <bool>false</bool>
+         </property>
+         <property name="minimum">
+          <double>-1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>1.000000000000000</double>
          </property>
         </widget>
        </item>
@@ -1210,6 +1240,12 @@
          <property name="enabled">
           <bool>false</bool>
          </property>
+         <property name="minimum">
+          <double>-1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>1.000000000000000</double>
+         </property>
         </widget>
        </item>
        <item row="1" column="2">
@@ -1223,6 +1259,12 @@
         <widget class="QDoubleSpinBox" name="doubleSpinBox_p2_img">
          <property name="enabled">
           <bool>false</bool>
+         </property>
+         <property name="minimum">
+          <double>-1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>1.000000000000000</double>
          </property>
         </widget>
        </item>
